Bug 132726 - FILESAVE: DOC: Highlighting at the wrong area
Summary: FILESAVE: DOC: Highlighting at the wrong area
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.7.2 release
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:7.1.0
Keywords: bibisected, regression
: 105868 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-05-05 15:59 UTC by Telesto
Modified: 2021-08-11 05:18 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (461.80 KB, application/vnd.oasis.opendocument.text)
2020-05-05 16:00 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2020-05-05 15:59:57 UTC
Description:
EXPORT DOC: Highlighting at the wrong area 

Steps to Reproduce:
1. Open the attached file
2. Export to DOC
3. File Reload -> Closely everything has a yellow marking

Actual Results:
Yellow marking everywhere

Expected Results:
Only the selected area


Reproducible: Always


User Profile Reset: No



Additional Info:
Found in
Version: 7.0.0.0.alpha0+ (x64)
Build ID: 97a2c1fc5e376c0c00968f17a0392c6d3a5ed565
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win; 
Locale: nl-NL (nl_NL); UI-Language: en-US
Calc: 

and in
4.4.7.2

but not in
3.5.7.2
Comment 1 Telesto 2020-05-05 16:00:17 UTC
Created attachment 160389 [details]
Example file
Comment 2 Xisco Faulí 2020-05-06 11:06:42 UTC
I've tried to bisect it with bibisect-44max and it points me to https://cgit.freedesktop.org/libreoffice/core/commit/?id=bfb978334cea775b8ae5c40ceea050ea0660d80a, which doesn't seems related.

@Buovjaga, could you please give it a try on windows ?

@Justin, I thought you might be interested in this issue
Comment 3 Justin L 2020-05-06 13:16:00 UTC
I got a different bibisect result from bibisect-44max.

The last good highlighting was the one before this one which broke everything:
    commit 80fd9fb7209cfd5c0622ee99d59e42e6db32f021
    Author:     Umesh Kadam <umesh.kadam@synerzip.com>
    AuthorDate: Thu May 15 23:02:34 2014 +0530
    Commit:     Miklos Vajna <vmiklos@collabora.co.uk>
    CommitDate: Thu May 22 02:31:53 2014 -0500
        fdo#78333 : SdtContent and a Shape overlapping causes corruption

and partially fixed (the text came back - but with full yellow background) with
bibisect commit 97deac7040b404fc9b233384baa689415e795a16
    commit fe5b3c3357d9e613a0be53ec1e5546a59e21cea0
    Author:     Ravindra Vidhate <ravindra.vidhate@synerzip.com>
    AuthorDate: Wed Jun 11 16:38:17 2014 +0530
    Commit:     Miklos Vajna <vmiklos@collabora.co.uk>
    CommitDate: Mon Jun 16 13:08:53 2014 +0000
    
        fdo#79915:Text Data Lost after exporting through LO

The solid yellow background gave way to no background at all with
bibisect commit e642812606be49244f2f775e90169fbd1be29a97
    commit 7d9bb549d498d6beed2c4050c402d09643febdfa
    Author:     Armin Le Grand <alg@apache.org>
    AuthorDate: Mon Jun 2 15:00:50 2014 +0000
    Commit:     Miklos Vajna <vmiklos@collabora.co.uk>
    CommitDate: Tue Jul 1 13:30:09 2014 +0200
    
        Related: #i124638# Second step of DrawingLayer FillAttributes...

and then back to full highlighting again with
bibisect commit 612c411072ede9debf0ceafc3aef125b930b3762
    commit 3350fabd23859eb5fdbe77c6db9248866d4e2995
    Author:     Miklos Vajna <vmiklos@collabora.co.uk>
    AuthorDate: Mon Jun 30 13:46:04 2014 +0200
    Commit:     Miklos Vajna <vmiklos@collabora.co.uk>
    CommitDate: Tue Jul 1 13:30:12 2014 +0200
    
        SwXAutoStyle::GetPropertyValues_Impl: fix handling of CharAutoStyleName
Comment 4 Xisco Faulí 2020-05-06 17:07:12 UTC
Hi Justin,
Thanks for the bisection try
Comment 5 Justin L 2020-05-06 17:12:38 UTC
The answer to fixing this bug is probably found in the first two bisected commits. Visually, it looks like the character run is off by one...
Comment 6 Commit Notification 2020-08-14 06:46:31 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6457d46967f8dbb41199b750d59edde839f24b5d

tdf#132726 tdf#134948 doc/rtf export: don't PostponeWritingText

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Justin L 2021-08-11 05:18:16 UTC
*** Bug 105868 has been marked as a duplicate of this bug. ***