tdf#132726 tdf#134948 doc/rtf export: don't PostponeWritingText

Since .doc and rtf don't postpone flys, they shouldn't also be
postponing the text.

Partially revert my LO 5.3 commits b39feae4f12b07a0fdb2c8c2a48d5aae613cd7c9/
3ade281c1da91b7646a56227cffba8eb8818ea30
which only avoided postponing within tables for the .doc format,
since this patch eliminates it completely for .doc and .rtf

I think the original Synerzip LO 4.4 patch
commit 80fd9fb7209cfd5c0622ee99d59e42e6db32f021
was only intended for DOCX formats.

I am concerned about doing this since the implications are unclear,
but I take comfort in seeing that many synerzip commits just
need to be reverted, and that a number of .doc bugs are
solved by doing this. The fact that few bug reports have
been made since 4.4 also suggests this isn't a hugely
active area. No intention to backport, and still lots of testing
time available for LO 7.1.

Change-Id: I9284d3cc516c480e8bb0848c17797988ffcdcd2c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/100175
Tested-by: Jenkins
Reviewed-by: Justin Luth <justin_luth@sil.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>